# pyfig

./: Dockerfile  README.md  pyproject.toml
fig/: __init__.py  config.py
tests/: helpers.py  test_cli.py  test_defaults.py  test_e2e.py
